--- a/public/css/login.css
+++ b/public/css/login.css
@@ -106,6 +106,7 @@ html, body {
 .ts-signup-btn{
 	color: inherit;
 	font-size: 20pt;
+	white-space: nowrap;
 	position: relative;
 	margin-right: 25px;
 	color: white;
